# shittypaint

./: CMakeLists.txt  paint.cc
